# rltrain

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  metrics.csv  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  rff_cfg.txt  rff_env.json  ruff.toml  run.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
acrobot/: a2c-sam.json  env.json  ppo.json  reinforce-sam.json  reinforce.json
algorithms/: index.html
breakout/: ppo-lamp.json  ppo.json  reinforce-sam.json
cartpole/: env.json  ppo-lamp.json  ppo.json  reinforce-lamp.json  reinforce-sam.json
catcher/: a2c-lamp.json  env.json  ppo-lamp.json  ppo-sam.json  ppo.json  reinforce-sam.json
configuration/: index.html
docs/: algorithms.md  configuration.md  ecosystem.md  getting-started.md  index.md
ecosystem/: index.html
examples/: README.md  cartpole_video_demo.py  job.bat  plot.py  video_demo.py
examples/acrobot/: a2c-lamp.json  a2c-sam.json  a2c.json  cfg.txt  env.json  ppo-lamp.json  ppo-sam.json  ppo.json  reinforce-lamp.json  reinforce-sam.json  reinforce.json
examples/breakout/: a2c-lamp.json  a2c-sam.json  a2c.json  cfg.txt  env.json  ppo-lamp.json  ppo-sam.json  reinforce-lamp.json  reinforce-sam.json  reinforce.json
examples/cartpole/: a2c-lamp.json  a2c-sam.json  a2c.json  cfg.txt  env.json  ppo-lamp.json  ppo-sam.json  ppo.json  reinforce-lamp.json  reinforce-sam.json  reinforce.json
getting-started/: index.html
invaders/: a2c.json  env.json  ppo-sam.json  reinforce.json
pixelcopter/: cfg.txt  env.json  reinforce-lamp.json  reinforce-sam.json  reinforce.json
reference/: index.html
references/: references.bib
rltrain/: __init__.py  cli.py  trainer.py  type_aliases.py  typing.py
scripts/: enable-venv.sh  gen_ref_pages.py
search/: search_index.json
tests/: README.md  conftest.py  test_trainer.py
(+175 files in other folders)
