[project]
name = "rltrain"
version = "1.0.0"
description = "PyTorch deep reinforcement learning framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ammar Tarajia" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "toblox @ git+https://github.com/DarkbyteAT/toblox.git",
    "numpy",
    "matplotlib",
    "pandas",
    "seaborn",
    "gymnasium",
    "typer",
]

[project.optional-dependencies]
video = ["moviepy"]

[project.urls]
Homepage = "https://github.com/DarkbyteAT/rltrain"
Repository = "https://github.com/DarkbyteAT/rltrain"

[project.scripts]
rltrain = "rltrain.cli:main"

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
    "pre-commit",
    "moviepy",
    "pygame>=2.6.1",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
